Adding morphology data and scripts zip folders

--- a/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial.tex
+++ b/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial.tex
@@ -1,5 +1,9 @@
 \documentclass[11pt]{article}
 \input{../preamble}
+%\usepackage{paralist}
+%\usepackage{algorithm}
+%\usepackage{algpseudocode}
+%\usepackage{enumitem}
 
 \begin{document}
 \renewcommand{\headrulewidth}{0.5pt}
