--- a/tutorial_TeX/preamble.tex
+++ b/tutorial_TeX/preamble.tex
@@ -121,6 +121,7 @@
 
 \newcommand{\BAMM}{\texttt{BAMM}\xspace}
 \newcommand{\BEAST}{\texttt{BEAST}\xspace}
+\newcommand{\BiSSE}{\texttt{BiSSE}\xspace}
 \newcommand{\DDD}{\texttt{DDD}\xspace}
 \newcommand{\diversitree}{\texttt{diversitree}\xspace}
 \newcommand{\FigTree}{\texttt{FigTree}\xspace}
