--- a/tutorial_TeX/RB_DiversificationRate_Sampling_Tutorial/RB_DiversificationRate_Sampling_Tutorial.tex
+++ b/tutorial_TeX/RB_DiversificationRate_Sampling_Tutorial/RB_DiversificationRate_Sampling_Tutorial.tex
@@ -13,7 +13,7 @@
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large Diversification Rate Estimation with Missing Taxa}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Sebastian H{\"o}hna}
+{\Large Sebastian H{\"o}hna, Will A.~Freyman and Mike May}
 \vspace{1cm}
 \end{center}
 
