Final update to BiSSE/HiSSE tutorial

--- a/tutorial_TeX/preamble.tex
+++ b/tutorial_TeX/preamble.tex
@@ -125,6 +125,7 @@
 \newcommand{\DDD}{\texttt{DDD}\xspace}
 \newcommand{\diversitree}{\texttt{diversitree}\xspace}
 \newcommand{\FigTree}{\texttt{FigTree}\xspace}
+\newcommand{\HiSSE}{\texttt{HiSSE}\xspace}
 \newcommand{\Laser}{\texttt{laser}\xspace}
 \newcommand{\MrBayes}{\texttt{MrBayes}\xspace}
 \newcommand{\PAML}{\texttt{PAML}\xspace}
