--- a/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial.tex
+++ b/tutorial_TeX/RB_DiversificationRate_CharacterDependent_Tutorial/RB_DiversificationRate_CharacterDependent_Tutorial.tex
@@ -15,9 +15,9 @@
 \begin{center}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Episodic Diversification Rate Estimation}}\\\vspace{2mm}
+\textbf{\it{\Large State-Specific Diversification Rate Estimation}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Sebastian H{\"o}hna}
+{\Large Sebastian H{\"o}hna and Will Freyman}
 \vspace{1cm}
 \end{center}
 
