--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_1_content.tex
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_1_content.tex
@@ -475,6 +475,14 @@ This will execute the analysis and you should see the following output (though n
 
 When the analysis is complete, \RevBayes will quit and you will have a new directory called \cl{output} that will contain all of the files you specified with the monitors (Sect.\ \ref{subsub:Exercise-Monitors}).
 
+\subsubsection{Ascertainment Bias}
 
+As discussed in (Sect.\ \ref{subsub:Ascertainment Bias}), we also need to correct for ascertainment bias. 
+Once your initial Mk model estimation, source the mcmc\_simple.Rev script. 
+This file is an estimation of the Mk model without any correction for ascertainment bias. 
+We will use this for comparison in a moment. \par
+
+
+ 
 
 \newpage
