--- a/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Discrete_Morphology_Tutorial/RB_DiscreteMorphology_Tutorial_3_content.tex
@@ -128,7 +128,7 @@ This estimation will take longer than the Mk model, due to increased model compl
 \begin{figure}[h!]
 \fbox{%
 \begin{minipage}{\textwidth}\centering
-\includegraphics[width=0.5\textwidth,angle=0]{\ResourcePath figures/tikz/morph_hyperprior}
+\includegraphics[width=0.5\textwidth,angle=0]{\ResourcePath figures/catplate}
 \caption{\small Graphical model demonstrating the Dirichlet prior to allow variable state frequencies in both binary and multistate data.}
 \end{minipage}}
 \label{fig:module-relaxed morphology}
